framec_tests/language_specific/rust/v3_control_flow/positive/inline_after_forward_then_transition_exec.frm
@target rust

system S {
    machine:
        $A {
            e() {
                // use a non-terminal stack op; inline after is allowed
                $$[+]
                let z = 10; // inline after non-terminal op
                -> $B()
            }
        }
        $B { e() { } }
}
